Implement bragi pollrate and RGB

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -65,10 +65,12 @@ if (MACOS OR LINUX)
               device.c
               device_keyboard.c
               device_mouse.c
+              device_bragi.c
               device_vtable.c
               devnode.c
               dpi.c
               dpi_legacy.c
+              dpi_bragi.c
               firmware.c
               input.c
               keymap.c
@@ -78,6 +80,7 @@ if (MACOS OR LINUX)
               led_mouse.c
               led_mousepad.c
               led_wireless.c
+              led_mouse_bragi.c
               main.c
               notify.c
               profile.c
@@ -89,6 +92,7 @@ if (MACOS OR LINUX)
               devnode.h
               dpi.h
               dpi_legacy.h
+              dpi_bragi.h
               firmware.h
               includes.h
               input.h
@@ -102,7 +106,8 @@ if (MACOS OR LINUX)
               protocol.h
               request_hid_mac.h
               structures.h
-              usb.h)
+              usb.h
+              bragi_proto.h)
 endif ()
 if (MACOS)
     target_sources(
